--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -35,6 +35,7 @@ jobs:
 
   publish:
     name: Publish release to NuGet
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: windows-latest
     needs: build
     steps:
